pre style check

--- a/index.html
+++ b/index.html
@@ -11,34 +11,36 @@
 </head>
 
 <body>
-  <p id="paragraph1" style="color:red"> I never really know what to write for these, so i just write whatever comes to mind. I don't think what I write here is that important. Now have this table that has the contents of some random table I found online</p>
-  <table style="width:75%>
-    <tr>
-      <th>3rd grade Class</th>
-      <th>boys</th>
-      <th>girls</th>
-    </tr>
-    <tr>
-      <td>Ms. Smith</td>
-      <td>12</td>
-      <td>8</td>
-    </tr>
-    <tr>
-      <td>Mr. Jones </td>
-      <td>14</td>
-      <td>13</td>
-    </tr<
-    <tr>
-      <td>Ms. Williams</td>
-      <td>8</td>
-      <td>29</td>
-    </tr>
-    <tr>
-      <td>Ms. Melton</td>
-      <td>14</td>
-      <td>14</td>
-    </tr>
-  </table>
+  <p id="paragraph1" style="color:red"> I never really know what to write for these, so i just write whatever comes to mind. I don't think what I write here is that important. Now look at this table that has the contents of some random table I found online</p>
+<table style="width:100%">
+  <tr>
+    <th>3rd Grade Class</th>
+    <th>Boys</th>
+    <th>Girls</th>
+  </tr>
+  <tr>
+    <td>Ms. Smith</td>
+    <td>12</td>
+    <td>8</td>
+  </tr>
+  <tr>
+    <td>Mr. Jones</td>
+    <td>14</td>
+    <td>13</td>
+  </tr>
+  <tr>
+    <td>Ms. Williams</td>
+    <td>8</td>
+    <td>29</td>
+  </tr>
+  <tr>
+    <td>Ms. Melton</td>
+    <td>14</td>
+    <td>14</td>
+  </tr>
+</table>
+<p>Here's the actual table if you wanted to see it. Found it on google by searching "math table".</p>
+<img src="./table.jpg" alt="table" height="125" width="281">
 </body>
 
 </html>
